// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Component Should render a Switch with default styles 1`] = `
<label
  class="sc-bdfBQB cMDThJ"
>
  <input
    class="sc-dlfnuX fFazWo"
    type="checkbox"
    value="switch"
  />
  <span
    class="sc-gsTEea gAfLgx"
  />
</label>
`;

exports[`Switch Component Should render a checked Switch 1`] = `
<label
  class="sc-bdfBQB cMDThJ"
>
  <input
    checked=""
    class="sc-dlfnuX fFazWo"
    type="checkbox"
    value="switch"
  />
  <span
    class="sc-gsTEea gAfLgx"
  />
</label>
`;

exports[`Switch Component Should render a disabled Switch 1`] = `
<label
  class="sc-bdfBQB hHOdmo"
  disabled=""
>
  <input
    class="sc-dlfnuX fFazWo"
    disabled=""
    type="checkbox"
    value="switch"
  />
  <span
    class="sc-gsTEea bMoSig"
    disabled=""
  />
</label>
`;
